@@ -1,5 +1,6 @@
 <?php
 
+
 /* vim: set expandtab tabstop=4 shiftwidth=4 softtabstop=4: */
 
 // +-------------------------------------------------------------------+
@@ -33,84 +34,27 @@
 // |                                                                   |
 // +-------------------------------------------------------------------+
 
-/**
- * WiFiDog Authentication Server home page
- *
- * @package    WiFiDogAuthServer
+/** A Smarty resource plugin to process a template from a php string
  * @author     Benoit Grégoire <bock@step.polymtl.ca>
- * @author     Max Horvath <max.horvath@maxspot.de>
- * @copyright  2004-2006 Benoit Grégoire, Technologies Coeus inc.
- * @copyright  2006 Max Horvath, maxspot GmbH
- * @version    Subversion $Id$
+ * @copyright  2007 Benoit Grégoire, Technologies Coeus inc.
+ * @version    Subversion $Id: $
  * @link       http://www.wifidog.org/
  */
+function smarty_resource_string_source($tpl_name, & $tpl_source, & $smarty) {
+    $tpl_source = $tpl_name;
+    return true;
+}
 
-/**
- * Don't change the first require_once() as we didn't add WiFiDogs installation
- * path to the global include_path variable of PHP, yet!
- */
-require_once(dirname(__FILE__) . '/include/common.php');
+function smarty_resource_string_timestamp($tpl_name, & $tpl_timestamp, & $smarty) {
+    $tpl_timestamp = time();
+    return true;
+}
 
-require_once('include/common_interface.php');
-require_once('classes/MainUI.php');
-require_once('classes/Network.php');
-require_once('classes/Node.php');
-require_once('classes/User.php');
-$smarty = SmartyWifidog::getObject();
-// Init ALL smarty SWITCH values
-$smarty->assign('sectionTOOLCONTENT', false);
-$smarty->assign('sectionMAINCONTENT', false);
+function smarty_resource_string_secure($tpl_name, & $smarty) {
+    //No choice but to set it true
+    return true;
+}
 
-// Init ALL smarty values
-$smarty->assign('googleMapsEnabled', false);
-
-// Get information about network
-$network = Network::getCurrentNetwork();
-
-/*
- * Tool content
- */
-
-// Set section of Smarty template
-$smarty->assign('sectionTOOLCONTENT', true);
-
-// Compile HTML code
-$html = $smarty->fetch("templates/sites/index.tpl");
-
-/*
- * Main content
- */
-
-// Reset ALL smarty SWITCH values
-$smarty->assign('sectionTOOLCONTENT', false);
-$smarty->assign('sectionMAINCONTENT', false);
-
-// Set section of Smarty template
-$smarty->assign('sectionMAINCONTENT', true);
-
-// Set Google maps information
-$smarty->assign('googleMapsEnabled', defined('GMAPS_HOTSPOTS_MAP_ENABLED') && GMAPS_HOTSPOTS_MAP_ENABLED);
-
-$net = Network::getCurrentNetwork();
-$smarty->assign('networkNumValidUsers', $net ? $net->getNumValidUsers() : 0);
-
-// Compile HTML code
-$html_body = $smarty->fetch("templates/sites/index.tpl");
-
-/*
- * Render output
- */
-$ui = MainUI::getObject();
-$ui->addContent('left_area_middle', $html);
-$ui->addContent('main_area_top', $html_body);
-$ui->display();
-
-/*
- * Local variables:
- * tab-width: 4
- * c-basic-offset: 4
- * c-hanging-comment-ender-p: nil
- * End:
- */
-
-?>
+function smarty_resource_string_trusted($tpl_name, & $smarty) {
+    // not used for templates
+}
